# Raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.cmd  build.ps1  build.sh  run.sh
res/: computeShader.glsl  fragmentShader.glsl  vertexShader.glsl
res/models/: Cube.cpp  Pyramid.cpp  Shape.cpp  Shape.hpp
res/shaders/: computeShader.glsl  fragmentShader.glsl  testFrag.glsl  vertexShader.glsl
src/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  ComputeShader.cpp  Cube.hpp  IndexBuffer.cpp  Raytracer.cpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderStorageBuffer.cpp  Texture.cpp  Texture.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBufferLayout.hpp  Window.cpp  Window.hpp  imgui.ini
